  specification is expected, e.g. `[@@@ocaml.warning ...]`.
  (Nicolás Ojeda Bär, review by Gabriel Scherer, Florian Angeletti and Leo
  White)

- #9751: Add warning 68. Pattern-matching depending on mutable state
  prevents the remaining arguments from being uncurried.
  (Hugo Heuzard, review by Leo White)

- #9783: Widen warning 16 to more cases.
  (Leo White, review by Florian Angeletti)

### Internal/compiler-libs changes:

- #8987: Make some locations more accurate
  (Thomas Refis, review by Gabriel Scherer)

- #9216: add Lambda.duplicate which refreshes bound identifiers
  (Gabriel Scherer, review by Pierre Chambart and Vincent Laviron)

- #9376: Remove spurious Ptop_defs from #use
  (Leo White, review by Damien Doligez)

- #9464, #9493, #9520, #9563, #9599, #9608, #9647: refactor
  the pattern-matching compiler
  (Thomas Refis and Gabriel Scherer, review by Florian Angeletti)

- #9604: refactoring of the ocamltest codebase.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Sébastien Hinderer)

- #9498, #9511: make the pattern-matching analyzer more robust to
  or-pattern explosion, by stopping after the first counter-example to
  exhaustivity
  (Gabriel Scherer, review by Luc Maranget, Thomas Refis and Florian Angeletti,
   report by Alex Fedoseev through Hongbo Zhang)

- #9514: optimize pattern-matching exhaustivity analysis in the single-row case
  (Gabriel Scherer, review by Stephen DOlan)

- #9442: refactor the implementation of the [@tailcall] attribute
  to allow for a structured attribute payload
  (Gabriel Scherer, review by Vladimir Keleshev and Nicolás Ojeda Bär)

- #9684: document in address_class.h the runtime value model in
  naked-pointers and no-naked-pointers mode
  (Xavier Leroy and Gabriel Scherer)

- #9696: ocamltest now shows its log when a test fails. In addition, the log
  contains the output of executed programs.
  (Nicolás Ojeda Bär, review by David Allsopp, Sébastien Hinderer and Gabriel
  Scherer)
